--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -1,59 +1,62 @@
 <div class='pull-right' >
-    <a class='btn' href="<?php echo $this->url(array('action' => 'edit-descriptif')) ?>">Modifier les descriptifs</a>
+    <a class='btn' href="<?= $this->url(array('action' => 'edit-descriptif')) ?>">Modifier les descriptifs</a>
 </div>
 
 <div id='descriptif-personnalise'>
     <h3>Descriptifs</h3>
 
-    <!-- TODO Faire la même avec des partials loops -->
     <h4 class='h4_subtitle'>Descriptif technique</h4>
-    <?php echo $this->partialLoop('etablissement/partials/descriptif/partial-rubrique-display.phtml', $this->rubriques) ?>
-
+    <?= $this->partialLoop('formulaire/partials/partial-rubrique-display.phtml', $this->rubriques) ?>
+    
+    <!-- TODO Faire la même avec des partials loops -->
     <?php foreach ($this->rubriques as $rubrique):
         if ($rubrique['DISPLAY'] === true): ?>
-            <h4 class='h4_subtitle' id='<?php echo strtolower(preg_replace('/\s+/', '-', $rubrique["NOM"])) ?>'><?php echo $rubrique['NOM'] ?></h4>
+            <h4 class='h4_subtitle' id='<?= strtolower(preg_replace('/\s+/', '-', $rubrique["NOM"])) ?>'><?= $rubrique['NOM'] ?></h4>
 
+            <!-- TODO Si rubrique affichée et aucun champ renseigné, afficher un message -->
             <div id='affichage-informations' class='form-horizontal'>
                 <?php if (isset($this->champs[$rubrique['ID_RUBRIQUE']])):
+                    $numberOfFilledField = 0;
                     foreach ($this->champs[$rubrique['ID_RUBRIQUE']] as $champ):
                         if (
                             ($champ['ID_TYPECHAMP'] !== 6 && $champ['VALEUR'] !== null)
                             || ($champ['ID_TYPECHAMP'] === 6 && $champ['VALEUR'] !== null && $champ['VALEUR'] !== 0)
-                        ): ?>
+                        ):
+                            $numberOfFilledField++ ?>
                             <div class='control-group'>
-                                <strong class='control-label'><?php echo $champ['NOM'] ?></strong>
+                                <strong class='control-label'><?= $champ['NOM'] ?></strong>
                                 <div class='controls'>
                                     <?php switch ($champ['ID_TYPECHAMP']) {
                                         // Texte
                                         case 1:
                                         // Nombre
                                         case 5: ?>
-                                            <div class='text-control'><?php echo $champ['VALEUR'] ?></div>
+                                            <div class='text-control'><?= $champ['VALEUR'] ?></div>
                                             <?php break;
                                         // Texte long
                                         case 2: ?>
-                                            <textarea readonly><?php echo $champ['VALEUR'] ?></textarea>
+                                            <textarea readonly><?= $champ['VALEUR'] ?></textarea>
                                             <?php break;
                                         // WYSIWYG
                                         case 3: ?>
-                                            <div class='tinyarea text-control' readonly><?php echo $champ['VALEUR'] ?></div>
+                                            <div class='tinyarea text-control' readonly><?= $champ['VALEUR'] ?></div>
                                         <?php break;
                                         // Liste
                                         case 4: ?>
                                             <select disabled>
                                                 <?php foreach($this->champsvaleurliste[$champ['ID_CHAMP']] as $champvaleurliste): ?>
                                                     <option
-                                                        value="<?php echo $champvaleurliste['VALEUR'] ?>"
-                                                        <?php echo $champvaleurliste['VALEUR'] === $champ['VALEUR'] ? 'selected' : '' ?>
+                                                        value="<?= $champvaleurliste['VALEUR'] ?>"
+                                                        <?= $champvaleurliste['VALEUR'] === $champ['VALEUR'] ? 'selected' : '' ?>
                                                     >
-                                                        <?php echo $champvaleurliste['VALEUR'] ?>
+                                                        <?= $champvaleurliste['VALEUR'] ?>
                                                     </option>
                                                 <?php endforeach ?>
                                             </select>
                                         <?php break;
                                         // Case à cocher
                                         case 6: ?>
-                                            <input type='checkbox' disabled <?php echo $champ['VALEUR'] ? 'checked' : '' ?>>
+                                            <input type='checkbox' disabled <?= $champ['VALEUR'] ? 'checked' : '' ?>>
                                         <?php break;
                                         default:
                                             break;
@@ -62,8 +65,15 @@
                             </div>
                         <?php endif;
                     endforeach;
+                    if ($numberOfFilledField === 0):
+                        echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
+                            'message' => 'Aucune valeur renseignée.'
+                        ]);
+                    endif;
                 else: 
-                    echo $this->partial('etablissement/partials/descriptif/partial-aucun-champ.phtml');
+                    echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
+                        'message' => 'Aucun champ renseigné. Contactez un administrateur Prevarisc.'
+                    ]);
                 endif ?>
             </div>
         <?php endif;
