--- a/application/views/scripts/changement/index.phtml
+++ b/application/views/scripts/changement/index.phtml
@@ -8,9 +8,8 @@
         <h3>
             Message de <?php echo strtolower($changement["LIBELLE_CHANGEMENT"]); ?>
         </h3>
-        <textarea class="tinyarea" 
-            name='<?php echo $changement["ID_CHANGEMENT"]; ?>_MESSAGE'
-        ><?php if ($changement["MESSAGE_CHANGEMENT"]) { echo $changement["MESSAGE_CHANGEMENT"]; } ?></textarea>
+        <textarea class="tinyarea" name='<?php echo $changement["ID_CHANGEMENT"]; ?>_MESSAGE'>
+        <?php if ($changement["MESSAGE_CHANGEMENT"]) { echo $changement["MESSAGE_CHANGEMENT"]; } ?></textarea>
     <?php endforeach ?>
 </form>
 
