--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -13,12 +13,11 @@
         if (boolval($rubrique['DISPLAY']) === true): ?>
             <h4 class='h4_subtitle' id='<?= strtolower(preg_replace('/\s+/', '-', $rubrique["NOM"])) ?>'><?= $rubrique['NOM'] ?></h4>
 
-            <!-- TODO Si rubrique affichée et aucun champ renseigné, afficher un message -->
             <div id='affichage-informations' class='form-horizontal'>
-                <?php if (isset($this->champs[$rubrique['ID_RUBRIQUE']])):
+                <?php if (!empty($rubrique['CHAMPS'])):
                     $numberOfFilledField = 0;
                     
-                    foreach ($this->champs[$rubrique['ID_RUBRIQUE']] as $champ):
+                    foreach ($rubrique['CHAMPS'] as $champ):
                         if (
                             ($champ['ID_TYPECHAMP'] !== 6 && $champ['VALEUR'] !== null)
                             || ($champ['ID_TYPECHAMP'] === 6 && $champ['VALEUR'] !== null && $champ['VALEUR'] !== 0)
