--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
@@ -31,8 +31,8 @@
         <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DISPLAY']) === false ? 'hide' : '' ?>">
             <h4 class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
 
-            <?php if (isset($this->champs[$rubrique['ID_RUBRIQUE']])):
-                foreach ($this->champs[$rubrique['ID_RUBRIQUE']] as $champ): ?>
+            <?php if (!empty($rubrique['CHAMPS'])):
+                foreach ($rubrique['CHAMPS'] as $champ): ?>
                     <div class='control-group'>
                         <label for='champ-<?= $champ["ID_CHAMP"] ?>' class='control-label'>
                             <strong><?= $champ['NOM'] ?></strong>
