Correction de typos

--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -12,13 +12,13 @@
         <a href="#" id='createConvoc'><em class="icon-file"></em> Générer Convocations</a>
     </li>
     <li>
-        <a href="#" id='createOdj'><em class="icon-list-alt"></em> Génerer l'ordre du jour</a>
+        <a href="#" id='createOdj'><em class="icon-list-alt"></em> Générer l'ordre du jour</a>
     </li>
     <li>
-        <a href="#" id='createPv'><em class="icon-file"></em> Génerer PV</a>
+        <a href="#" id='createPv'><em class="icon-file"></em> Générer PV</a>
     </li>
     <li>
-        <a href="#" id='creationCompteRendu'><em class="icon-book"></em> Génerer le compte rendu</a>
+        <a href="#" id='creationCompteRendu'><em class="icon-book"></em> Générer le compte rendu</a>
     </li>
     <li>
         <?php if($this->infosDateComm['GESTION_HEURES'] == 1): ?>
