--- a/application/views/scripts/dossier/rapport.phtml
+++ b/application/views/scripts/dossier/rapport.phtml
@@ -150,7 +150,7 @@
     </div>
     <br/>
     <div class='row-flud'>
-        <input type='generate' class='btn btn-success' id='test' value='Génerer le(s) document(s)' >
+        <input type='generate' class='btn btn-success' id='test' value='Générer le(s) document(s)' >
     </div>
 </form>
 
